crates/settings/src/snapshots/settings__line_width__tests__deserialize_oob_line_width.snap
---
source: crates/settings/src/line_width.rs
expression: error
---
TOML parse error at line 2, column 14
  |
2 | line-width = 400
  |              ^^^
The line width must be a value between 1 and 320, not 400.
